--- a/public/level2.css
+++ b/public/level2.css
@@ -1,35 +1,27 @@
 
-.obj-tree {
+.obj-bell1 {
     position: absolute;
-    top: 5%;
-    left: 2%;
-    width: 36%;
-    height: 80%;
+    top: 65%;
+    left: 40%;
+    width: 6%;
+    height: 9%;
+    border-style: double;
+}
+
+.obj-bell2 {
+    position: absolute;
+    top: 66%;
+    left: 50%;
+    width: 4%;
+    height: 9%;
     border-style: dashed;
 }
 
-.obj-tree2 {
-    position: absolute;
-    top: 8%;
-    right: 1%;
-    width: 17%;
-    height: 70%;
-}
-
-.obj-way {
+.obj-bell3 {
     position: absolute;
     top: 65%;
-    left: 45%;
-    width: 15%;
-    height: 22%;
-    font-size: 16vh;
-}
-
-.obj-river {
-    position: absolute;
-    top: 63%;
-    left: 40%;
-    width: 3%;
-    height: 42%;
-    transform: rotate(-70deg);
+    left: 55%;
+    width: 4%;
+    height: 9%;
+    border-style: solid;
 }
