2024-05-30 v1.0 first version online

--- a/public/level2.css
+++ b/public/level2.css
@@ -1,10 +1,11 @@
 
 .obj-fruits {
     position: absolute;
-    top: 36%;
+    bottom: 56%;
     left: 15%;
     width: 6%;
     height: 10%;
+    transform-origin: bottom left;
     /*border-style: solid;*/
     background-image: url("res/fruits.png");
     background-size: contain;
